--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
   <div class="container">
 
     <div id="quote-box">
-      <p class="quote">Every great developer you know got there by solving problems they were unqualified to solve until they actually did it.</p>
-      <p class="source">Patrick McKenzie<span class="citation">Twitter</span><span class="year">2016</span></p>
+      <p class="quote">I say to you today, my friends, that in spite of the difficulties and frustrations of the moment, I still have a dream.</p>
+      <p class="source">Martin Luther King, Jr.<span class="citation">'I Have a Dream' speech</span><span class="year">1963</span></p>
+      <p class="tags"><em>#CivilRights #Dream #Freedom</em></p>
     </div>
 
     <button id="loadQuote">Show another quote</button>
